fixed header spacing

--- a/src/components/ViewAbout.css
+++ b/src/components/ViewAbout.css
@@ -3,6 +3,12 @@
 }
 
 #spin-icon {
-  animation: App-logo-spin infinite .6s linear;
+  animation: App-logo-spin infinite 2s linear;
   height: 80px;
+  margin: auto;
 }
+
+@keyframes App-logo-spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+  }
